# opensesame

./: CMakeLists.txt  README.md  compare.cpp  readFileSize.cpp  run.sh
